--- a/app/translations/fr/LC_MESSAGES/messages.po
+++ b/app/translations/fr/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-08-20 14:03-0400\n"
+"POT-Creation-Date: 2020-10-30 15:28-0400\n"
 "PO-Revision-Date: 2019-08-19 11:37-0400\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -16,103 +16,112 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.7.0\n"
+"Generated-By: Babel 2.8.0\n"
+
+#: app/templates/document_download_template.html:25
+msgid "GC Notify - Document download"
+msgstr "GC Notification - Téléchargement de fichiers"
 
 #: app/templates/error/400.html:2
 msgid "Bad Request"
-msgstr ""
+msgstr "Mauvaise requête"
 
 #: app/templates/error/401.html:2
 msgid "Unauthorized"
-msgstr ""
+msgstr "Non autorisé"
 
 #: app/templates/error/401.html:7
 msgid "You are not authorized to see this page."
-msgstr ""
+msgstr "Vous n'êtes pas autorisé à voir cette page."
 
 #: app/templates/error/403.html:2
 msgid "Forbidden"
-msgstr ""
+msgstr "Interdit"
 
 #: app/templates/error/403.html:10
 msgid "You do not have permission to view this page."
-msgstr ""
+msgstr "Vous n'avez pas les permissions pour voir cette page."
+
+#: app/templates/error/404.html:2 app/templates/error/404.html:7
+#: app/templates/error/410.html:7
+msgid "Page could not be found"
+msgstr "Page non trouvée"
+
+#: app/templates/error/404.html:10 app/templates/error/410.html:10
+msgid "Check you’ve entered the correct web address."
+msgstr "Vérifiez que vous avez entré une adresse correcte."
 
 #: app/templates/error/410.html:2
 msgid "Page not found"
-msgstr ""
-
-#: app/templates/error/410.html:7
-msgid "Page could not be found"
-msgstr ""
-
-#: app/templates/error/410.html:10
-msgid "Check you’ve entered the correct web address."
-msgstr ""
+msgstr "Page non trouvée"
 
 #: app/templates/error/500.html:2
 msgid "Server error"
-msgstr ""
+msgstr "Erreur du serveur"
 
 #: app/templates/error/500.html:7
 msgid "Sorry, we’re experiencing technical difficulties"
-msgstr ""
+msgstr "Désolé, nous avons des difficultés techniques"
 
 #: app/templates/error/500.html:9
 msgid "Try again later."
-msgstr ""
+msgstr "Réessayez plus tard plus."
 
 #: app/templates/views/download.html:4
 msgid "Download your file"
-msgstr ""
+msgstr "Téléchargez votre fichier"
 
 #: app/templates/views/download.html:6
 msgid ""
 "Save your file somewhere you can find it. You may need to print it or "
 "show it to someone later."
 msgstr ""
+"Sauvegardez votre fichier quelque part où vous pourrez le retrouver. Vous"
+" pourriez avoir besoin de l'imprimer ou le montrer à quelqu'un plus tard."
 
 #: app/templates/views/download.html:8
 msgid "Check the email that"
-msgstr ""
+msgstr "Vérifiez le courriel que"
 
 #: app/templates/views/download.html:8
 msgid "sent you for more information."
-msgstr ""
+msgstr "vous a envoyé pour plus d'informations."
 
 #: app/templates/views/download.html:10
 msgid "Download this file to your device"
-msgstr ""
+msgstr "Téléchargez ce fichier sur votre appareil."
 
 #: app/templates/views/download.html:13
 msgid "If you have any questions,"
-msgstr ""
+msgstr "Si vous avez des questions,"
 
 #: app/templates/views/download.html:15 app/templates/views/index.html:10
 msgid "contact"
-msgstr ""
+msgstr "contact"
 
 #: app/templates/views/download.html:17 app/templates/views/index.html:12
 msgid "email"
-msgstr ""
+msgstr "envoyez un courriel à"
 
 #: app/templates/views/download.html:19 app/templates/views/index.html:14
 msgid "call"
-msgstr ""
+msgstr "appellez"
 
 #: app/templates/views/index.html:4
 msgid "You have a file to download"
-msgstr ""
+msgstr "Vous avez un fichier à télécharger"
 
 #: app/templates/views/index.html:5
 msgid "sent you a file to download."
-msgstr ""
+msgstr "vous a envoyé un fichier à télécharger."
 
 #: app/templates/views/index.html:8
 msgid "If you’re not sure why you’ve been sent a file, or you have any questions,"
 msgstr ""
+"Si vous ne savez pas pourquoi vous avez reçu ce fichier, ou si vous avez "
+"des questions,"
 
 #: app/templates/views/index.html:18
 msgid "Continue"
-msgstr ""
+msgstr "Continuer"
 
